--- a/index.html
+++ b/index.html
@@ -8,10 +8,15 @@
     <meta name="description" content="Creative CV is a HTML resume template for professionals. Built with Bootstrap 4, Now UI Kit and FontAwesome, this modern and responsive design template is perfect to showcase your portfolio, skils and experience."/>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
     <link href="css/aos.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="styles/main.css" rel="stylesheet">
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   </head>
+
   <body id="top">
     <header>
       <div class="profile-page sidebar-collapse">
@@ -172,7 +177,8 @@
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
             <div class="h5">Student Research Intern</div>
-              <p class="category">Adviser: Jiawei Han, Data Mining Group, University of Illinois at Urbana-Champaign</p>
+
+              <p class="category">Adviser: Jiawei Han, Data Mining Group, U of Illinois at Urbana-Champaign</p>
               Proposed a learning framework to conduct named entity recognition on multi-source data<br>
               Authored a paper "Complementary Learning for Named Entity Recognition" that was submitted to AAAI 2019<br>
               Also helped to complete a KDD demo SetSearch+ at the beginning of my intern
@@ -190,9 +196,13 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Student Research Intern</div>
-              <p class="category">Adviser: Jie Tang, Knowledge Engineering Group, Tsinghua University</p>
-              "Fast Top-k Area Topics Extraction with Knowledge Base" Proc. IEEE DSC 2018 (https://arxiv.org/abs/1710.04822)<br>
+            <div class="h5">Student Research Intern
+              <a href="https://ieeexplore.ieee.org/abstract/document/8411837" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">
+                <i class="fa fa-file-text-o"></i>
+              </a>
+            </div>
+              <p class="category">Adviser: Jie Tang, Knowledge Engineering Group, Tsinghua U</p>
+              "Fast Top-k Area Topics Extraction with Knowledge Base" Proc. IEEE DSC 2018<br>
               Crawled data from Wikipedia knowledge base<br>
               Contributed by putting forward a method to solve inaccurate data source problem
           </div>
@@ -209,8 +219,12 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-              <div class="h5">Course Project</div>
-              <p class="category">Object-Oriented Programming Course, Tsinghua University</p>
+              <div class="h5">Course Project
+                <a href="https://github.com/Bakser/Werewolf" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">
+                  <i class="fa fa-github" href="https://github.com/Bakser/Werewolf"></i>
+                </a>
+              </div>
+              <p class="category">Object-Oriented Programming Course, Tsinghua U</p>
               Werewolf is one of the most famous table game among Chinese teenagers<br>
               Enable people to compete with each other online through TCP protocol<br>
               Contributed to all the GUI part and some of the client logic part
@@ -218,6 +232,29 @@
       </div>
     </div>
   </div>
+    <div class="card">
+      <div class="row">
+        <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body cc-experience-header">
+            <p>Feb 2018 - Feb 2018</p>
+            <div class="h5">Guizhou, China</div>
+          </div>
+        </div>
+        <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+          <div class="card-body">
+            <div class="h5">Big Data & Proverty Field Trip
+              <a href="files/guizhou_bigdata.pdf" class="btn btn-primary btn-sm active" role="button" aria-pressed="true">
+                <i class="fa fa-file-text-o"></i>
+              </a>
+            </div>
+            <p class="category">Winter Social Practice, Tsinghua U</p>
+            Interviewed government leaders<br>
+            Investigate the rural area and big data industry<br>
+            Wrote a report and provide it to the director of the Guizhou Big Data Development Administration
+          </div>
+        </div>
+      </div>
+    </div>
 </div>
 
 
