--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 
               <p class="category">Adviser: Jiawei Han, Data Mining Group, U of Illinois at Urbana-Champaign</p>
               Proposed a learning framework to conduct named entity recognition on multi-source data<br>
-              Authored a paper "Complementary Learning for Named Entity Recognition" that was submitted to AAAI 2019<br>
+              Authored a paper "Complementary Learning for Named Entity Recognition"<br>
               Also helped to complete a KDD demo SetSearch+ at the beginning of my intern
           </div>
         </div>
