--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <div class="cc-profile-image"><a href="#"><img src="images/asic.jpeg" alt="Image"/></a></div>
           <div class="h2 title">(Sherilyn) Shiyin Wang</div>
           <p class="category text-white">Tsinghua CS Undergraduate, Yao Class 2020</p>
-          <a class="btn btn-primary smooth-scroll mr-2" href="files/overleaf.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Casual CV</a>
-          <a class="btn btn-primary" href="files/cv1005.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Formal CV</a>
+          <a class="btn btn-primary smooth-scroll mr-2" href="files/casual_cv.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Casual CV</a>
+          <a class="btn btn-primary" href="files/cv1123.pdf" data-aos="zoom-in" data-aos-anchor="data-aos-anchor">Formal CV</a>
         </div>
       </div>
       <div class="section">
