--- a/index.html
+++ b/index.html
@@ -302,8 +302,8 @@
         </div>
         <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
           <div class="card-body">
-            <div class="h5">Beijing No.4 High School</div>
-            <p class="category">Science Division, Math Competition Group</p>
+            <div class="h5">Science Division, Math Competition Group</div>
+            <p class="category">Beijing No.4 High School</p>
             <!--<p>2015&2016 Several Math Prizes</p>-->
             <!--<p>2015 International (High School Student) Mathematical Modeling Competition Second Prize 2015 Beijing 3D Print Competition First Prize</p>-->
             <!--<p>2015 Autism children volunteer | Beijing Xingxingyu</p>-->
