--- a/index.html
+++ b/index.html
@@ -86,18 +86,18 @@
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Email:</strong></div>
               <div class="col-sm-8">wangshiy16@mails.tsinghua.edu.cn</div>
-            </div>
-            <div class="row mt-3">
-              <div class="col-sm-4"><strong class="text-uppercase">Phone:</strong></div>
-              <div class="col-sm-8">+86 1880115913</div>
+              <div class="col-sm-4"><strong class="text-uppercase"></strong></div>
+              <div class="col-sm-8">shiyinw@mit.edu</div>
+              <div class="col-sm-4"><strong class="text-uppercase"></strong></div>
+              <div class="col-sm-8"><s>shiyinw@illinois.edu</s></div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Language:</strong></div>
-              <div class="col-sm-8">English, Chinese</div>
+              <div class="col-sm-8">Chinese(native), English(fluent)</div>
             </div>
             <div class="row mt-3">
               <div class="col-sm-4"><strong class="text-uppercase">Hobbies:</strong></div>
-              <div class="col-sm-8">Musical, Traveling, Watercolor</div>
+              <div class="col-sm-8">Musical, Traveling, Watercolor, Math</div>
             </div>
           </div>
         </div>
@@ -502,10 +502,12 @@
                   <div class="card-body">
                     <p class="mb-0"><strong>Address </strong></p>
                     <p class="pb-2"> Zijing Student Apt 4, Tsinghua University, Beijing, China</p>
-                    <p class="mb-0"><strong>Phone</strong></p>
-                    <p class="pb-2">+86 18801157913</p>
                     <p class="mb-0"><strong>Email</strong></p>
                     <p>wangshiy16@mails.tsinghua.edu.cn</p>
+                    <p class="mb-0"><strong></strong></p>
+                    <p>shiyinw@mit.edu</p>
+                    <p class="mb-0"><strong></strong></p>
+                    <p><s>shiyinw@illinois.edu</s></p>
                   </div>
                 </div>
               </div>
