--- a/index.html
+++ b/index.html
@@ -224,10 +224,10 @@
                     <i class="fa fa-github" href="https://github.com/Bakser/Werewolf"></i>
                   </a>
                 </div>
-                <p class="category">Object-Oriented Programming Course, Tsinghua U</p>
+                <p class="category">Object-Oriented Programming, Tsinghua U</p>
                 Cross-platform desktop game application developed by C++<br>
                 Werewolf is one of the most famous table game among Chinese teenagers<br>
-                Enable people to compete with each other online through TCP protocol<br>
+                Enabled people to compete with each other online through TCP protocol<br>
                 Contributed to all the GUI part and some of the client logic part
               </div>
             </div>
@@ -237,7 +237,7 @@
           <div class="row">
             <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
               <div class="card-body cc-experience-header">
-                <p>May 2017 - Jun 2017</p>
+                <p>Nov 2018 - Dec 2018</p>
                 <div class="h5">Beijing, China</div>
               </div>
             </div>
@@ -251,8 +251,10 @@
                     <i class="fa fa-github" href="https://github.com/shiyinw/THUFood"></i>
                   </a>
                 </div>
-                <p class="category">Database Course, Tsinghua U</p>
-                Full-stack web application developed by HTML/CSS + Python Flask + Oracle
+                <p class="category">Database, Tsinghua U</p>
+                Full-stack web application<br>
+                HTML/CSS + Python Flask + Oracle<br>
+                Solo Course Project
               </div>
             </div>
           </div>
@@ -311,7 +313,7 @@
               </div>
               <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                 <div class="card-body">
-                  <div class="h5">Bachelor of Computer Science, Minor in Statistics</div>
+                  <div class="h5">Bachelor of Computer Science & Minor in Statistics</div>
                   <p class="category">Tsinghua University</p>
                   <!--<p>Euismod massa scelerisque suspendisse fermentum habitant vitae ullamcorper magna quam iaculis, tristique sapien taciti mollis interdum sagittis libero nunc inceptos tellus, hendrerit vel eleifend primis lectus quisque cubilia sed mauris. Lacinia porta vestibulum diam integer quisque eros pulvinar curae, curabitur feugiat arcu vivamus parturient aliquet laoreet at, eu etiam pretium molestie ultricies sollicitudin dui.</p>-->
                 </div>
