Add field trips

--- a/ai.html
+++ b/ai.html
@@ -1,10 +1,10 @@
 <div id="ajax-page" class="ajax-page-content">
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
-            <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="portfolio-4.html"><i class="zmdi zmdi-chevron-left"></i></a>
-                <a class="ajax-page-load" href="portfolio-1.html"><i class="zmdi zmdi-chevron-right"></i></a>
-            </div>
+            <!--<div class="nav-item ajax-page-prev-next">-->
+                <!--<a class="ajax-page-load" href="portfolio-4.html"><i class="zmdi zmdi-chevron-left"></i></a>-->
+                <!--<a class="ajax-page-load" href="portfolio-1.html"><i class="zmdi zmdi-chevron-right"></i></a>-->
+            <!--</div>-->
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="zmdi zmdi-close"></i></a>
             </div>
@@ -58,7 +58,7 @@
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/cs221_driverless_car" target="_blank">https://github.com/shiyinw/cs221_driverless_car</a></p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/Pac-Man" target="_blank">https://github.com/shiyinw/Pac-Man</a></p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/CS231n" target="_blank">https://github.com/shiyinw/CS231n</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i>2018 Sep ~ Dec</p></li>
+                    <li><p><i class="fa fa-calendar"></i>2018 Sep ~ 2019 Dec</p></li>
                 </ul>
 
                 <p class="text-justify">Built from the numpy scratch, I have acquired a deep understanding of the neural network algorithms. Then I developed reinforcement learning algorithms to play PacMan games and navigate driverless cars.</p>
@@ -66,9 +66,9 @@
 
                 <!-- Technology -->
                 <div class="tags-block">
-                    <div class="block-title">
-                        <h3>Technology</h3>
-                    </div>
+                    <!--<div class="block-title">-->
+                        <!--<h3>Technology</h3>-->
+                    <!--</div>-->
                     <ul class="tags">
                         <li><a>Tensorflow</a></li>
                         <li><a>Pytorch</a></li>
@@ -83,9 +83,8 @@
                     <div class="block-title">
                         <h3>Share</h3>
                     </div>
-                    <a href="#" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
-                    <a href="#" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
-                    <a href="#" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
+                    <a href="http://www.twitter.com/share?url=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
                 </div>
                 <!-- /Share Buttons -->
             </div>
