--- a/csapp.html
+++ b/csapp.html
@@ -1,10 +1,10 @@
 <div id="ajax-page" class="ajax-page-content">
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
-            <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="color.html"><i class="zmdi zmdi-chevron-left"></i></a>
-                <a class="ajax-page-load" href="color.html"><i class="zmdi zmdi-chevron-right"></i></a>
-            </div>
+            <!--<div class="nav-item ajax-page-prev-next">-->
+                <!--<a class="ajax-page-load" href="color.html"><i class="zmdi zmdi-chevron-left"></i></a>-->
+                <!--<a class="ajax-page-load" href="color.html"><i class="zmdi zmdi-chevron-right"></i></a>-->
+            <!--</div>-->
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="zmdi zmdi-close"></i></a>
             </div>
@@ -60,7 +60,7 @@
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i>Shiyin Wang</p></li>
                     <li><p><i class="fa fa-globe"></i> <a href="https://github.com/shiyinw/CSAPP" target="_blank">https://github.com/shiyinw/CSAPP</a></p></li>
-                    <li><p><i class="fa fa-calendar"></i>2018 Sep ~ Dec</p></li>
+                    <li><p><i class="fa fa-calendar"></i>2018 Sep ~ 2019 Dec</p></li>
                 </ul>
 
                 <p class="text-justify">BufLab, CacheLab, MollacLab, PerfLab, ProxyLab, and Y86.</p>
@@ -68,9 +68,9 @@
 
                 <!-- Technology -->
                 <div class="tags-block">
-                    <div class="block-title">
-                        <h3>Technology</h3>
-                    </div>
+                    <!--<div class="block-title">-->
+                        <!--<h3>Technology</h3>-->
+                    <!--</div>-->
                     <ul class="tags">
                         <li><a>C++</a></li>
                         <li><a>System</a></li>
@@ -79,14 +79,13 @@
                 <!-- /Technology -->
 
                 <!-- Share Buttons -->
-                <!--<div class="btn-group share-buttons">-->
-                    <!--<div class="block-title">-->
-                        <!--<h3>Share</h3>-->
-                    <!--</div>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>-->
-                <!--</div>-->
+                <div class="btn-group share-buttons">
+                    <div class="block-title">
+                        <h3>Share</h3>
+                    </div>
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
+                    <a href="http://www.twitter.com/share?url=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
+                </div>
                 <!-- /Share Buttons -->
             </div>
         </div>
