--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <title>Shiyin Wang's Resume</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <meta name="description" content="PRO Card - Material Resume / CV / vCard Template" />
-    <meta name="keywords" content="vcard, resposnive, retina, resume, jquery, css3, bootstrap, Material CV, portfolio" />
-    <meta name="author" content="lmtheme" />
+    <meta name="description" content="The Study, Interests, and Life of Shiyin Wang" />
+    <meta name="keywords" content="Computer Science, Biology, International Relations, Watercolor" />
+    <meta name="author" content="Shiyin Wang" />
     <link rel="shortcut icon" href="favicon.ico">
 
     <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
@@ -378,7 +378,7 @@
                         <a class="filter btn btn-sm btn-link" data-group="field">Field Study</a>
                       </li>
                       <li>
-                        <a class="filter btn btn-sm btn-link" data-group="culture">Cultural Event</a>
+                        <a class="filter btn btn-sm btn-link" data-group="others">Others</a>
                       </li>
                     </ul>
                     <!-- End of Portfolio filter -->
@@ -388,8 +388,8 @@
 
                       <!-- Portfolio Item 1 -->
                       <figure class="item" data-groups='["all", "research"]'>
-                        <a class="ajax-page-load" href="tbd.html">
-                          <img src="research/mit/1.jpg" alt="">
+                        <a class="ajax-page-load" href="mit.html">
+                          <img src="research/mit/cover.png" alt="">
                           <div>
                             <h5 class="name">Disentangle Private Information from Edge-Cloud Training</h5>
                             <small>MIT HanLab</small>
@@ -436,7 +436,7 @@
 
                       <!-- Portfolio Item 1 -->
                       <figure class="item" data-groups='["all", "product"]'>
-                        <a class="ajax-page-load" href="portfolio-1.html">
+                        <a class="ajax-page-load" href="database.html">
                           <img src="projects/database/login.png" alt="">
                           <div>
                             <h5 class="name">Python Flask + Oracle + Bootstrap, a Website for Restaurant Management</h5>
@@ -448,7 +448,7 @@
                       <!-- /Portfolio Item 1 -->
 
                       <figure class="item" data-groups='["all", "product"]'>
-                        <a class="ajax-page-load" href="portfolio-2.html">
+                        <a class="ajax-page-load" href="mcmc.html">
                           <img src="projects/mcmc/acc_like.png" alt="">
                           <div>
                             <h5 class="name">Markov Chain Monte Carlo for Ciphter Breaking</h5>
@@ -459,7 +459,7 @@
                       </figure>
 
                       <figure class="item" data-groups='["all", "product"]'>
-                        <a class="ajax-page-load" href="portfolio-3.html">
+                        <a class="ajax-page-load" href="sppm.html">
                           <img src="projects/sppm/2.png" alt="">
                           <div>
                             <h5 class="name">Stochastic Progressive Photon Mapping</h5>
@@ -502,16 +502,50 @@
                         </a>
                       </figure>
 
-                      <!--<figure class="item" data-groups='["all", "product"]'>-->
-                        <!--<a class="ajax-page-load" href="portfolio-5.html">-->
-                          <!--<img src="projects/mcmc/acc_like.png" alt="">-->
-                          <!--<div>-->
-                            <!--<h5 class="name">Markov Chain Monte Carlo for Ciphter Breaking</h5>-->
-                            <!--<small>MIT 6.437 Course Project</small>-->
-                            <!--<i class="fa fa-file-text-o"></i>-->
-                          <!--</div>-->
-                        <!--</a>-->
-                      <!--</figure>-->
+                      <figure class="item" data-groups='["all", "field"]'>
+                        <a class="ajax-page-load" href="guizhou.html">
+                          <img src="field/guizhou/cover.jpeg" alt="">
+                          <div>
+                            <h5 class="name">Guizhou: Big Data Industry and Poverty Alleviation</h5>
+                            <small>Field Study in 2018 Winter</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all", "field"]'>
+                        <a class="ajax-page-load" href="egypt.html">
+                          <img src="field/egypt/cover.jpeg" alt="">
+                          <div>
+                            <h5 class="name">Egypt: Glory, Struggling, and Hopes</h5>
+                            <small>Global South Culture Immersion Program 2018</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+                      <figure class="item" data-groups='["all", "others"]'>
+                        <a class="ajax-page-load" href="president.html">
+                          <img src="others/president/cover.jpg" alt="">
+                          <div>
+                            <h5 class="name">Senior Year Class President</h5>
+                            <small>Tsinghua IIIS Yao Class</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
+
+
+                      <figure class="item" data-groups='["all", "others"]'>
+                        <a class="ajax-page-load" href="gcf.html">
+                          <img src="others/gcf/cover.png" alt="">
+                          <div>
+                            <h5 class="name">Global Competence Fellowship</h5>
+                            <small>My Senior Fellowship at Tsinghua</small>
+                            <i class="fa fa-file-text-o"></i>
+                          </div>
+                        </a>
+                      </figure>
 
 
                       <!-- Portfolio Item 3 -->
