--- a/stanford.html
+++ b/stanford.html
@@ -1,10 +1,10 @@
 <div id="ajax-page" class="ajax-page-content">
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
-            <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="stanford.html"><i class="zmdi zmdi-chevron-left"></i></a>
-                <a class="ajax-page-load" href="stanford.html"><i class="zmdi zmdi-chevron-right"></i></a>
-            </div>
+            <!--<div class="nav-item ajax-page-prev-next">-->
+                <!--<a class="ajax-page-load" href="stanford.html"><i class="zmdi zmdi-chevron-left"></i></a>-->
+                <!--<a class="ajax-page-load" href="stanford.html"><i class="zmdi zmdi-chevron-right"></i></a>-->
+            <!--</div>-->
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="zmdi zmdi-close"></i></a>
             </div>
@@ -67,8 +67,9 @@
                 </div>
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i>Shiyin Wang, Tianyun Liu, and Russ B. Altman</p></li>
+                    <li><p><i class="fa fa-map"></i>Helix Group, Stanford University</p></li>
                     <!--<li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>-->
-                    <li><p><i class="fa fa-calendar"></i>2019 Jul ~ Aug</p></li>
+                    <li><p><i class="fa fa-calendar"></i>2019 Jul ~ 2019 Aug</p></li>
                 </ul>
 
                 <p class="text-justify">With the repaid development of big data technologies, biological datasets, such as PubMed, GoTerms, ArrayExpress, Protein Interaction Network and PubTator, are favored by researchers for they preserve high-quality, easy-access and structured data without worry about privacy issue.
@@ -79,9 +80,9 @@
 
                 <!-- Technology -->
                 <div class="tags-block">
-                    <div class="block-title">
-                        <h3>Technology</h3>
-                    </div>
+                    <!--<div class="block-title">-->
+                        <!--<h3>Technology</h3>-->
+                    <!--</div>-->
                     <ul class="tags">
                         <li><a>PPI Network</a></li>
                         <li><a>Embedding</a></li>
@@ -92,14 +93,13 @@
                 <!-- /Technology -->
 
                 <!-- Share Buttons -->
-                <!--<div class="btn-group share-buttons">-->
-                    <!--<div class="block-title">-->
-                        <!--<h3>Share</h3>-->
-                    <!--</div>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>-->
-                <!--</div>-->
+                <div class="btn-group share-buttons">
+                    <div class="block-title">
+                        <h3>Share</h3>
+                    </div>
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
+                    <a href="http://www.twitter.com/share?url=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
+                </div>
                 <!-- /Share Buttons -->
             </div>
         </div>
