--- a/color.html
+++ b/color.html
@@ -1,10 +1,10 @@
 <div id="ajax-page" class="ajax-page-content">
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
-            <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="color.html"><i class="zmdi zmdi-chevron-left"></i></a>
-                <a class="ajax-page-load" href="color.html"><i class="zmdi zmdi-chevron-right"></i></a>
-            </div>
+            <!--<div class="nav-item ajax-page-prev-next">-->
+                <!--<a class="ajax-page-load" href="color.html"><i class="zmdi zmdi-chevron-left"></i></a>-->
+                <!--<a class="ajax-page-load" href="color.html"><i class="zmdi zmdi-chevron-right"></i></a>-->
+            <!--</div>-->
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="zmdi zmdi-close"></i></a>
             </div>
@@ -69,9 +69,9 @@
 
                 <!-- Technology -->
                 <div class="tags-block">
-                    <div class="block-title">
-                        <h3>Technology</h3>
-                    </div>
+                    <!--<div class="block-title">-->
+                        <!--<h3>Technology</h3>-->
+                    <!--</div>-->
                     <ul class="tags">
                         <li><a>OpenCV2</a></li>
                         <li><a>Python</a></li>
@@ -80,14 +80,13 @@
                 <!-- /Technology -->
 
                 <!-- Share Buttons -->
-                <!--<div class="btn-group share-buttons">-->
-                    <!--<div class="block-title">-->
-                        <!--<h3>Share</h3>-->
-                    <!--</div>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>-->
-                <!--</div>-->
+                <div class="btn-group share-buttons">
+                    <div class="block-title">
+                        <h3>Share</h3>
+                    </div>
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
+                    <a href="http://www.twitter.com/share?url=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
+                </div>
                 <!-- /Share Buttons -->
             </div>
         </div>
