--- a/uiuc.html
+++ b/uiuc.html
@@ -1,10 +1,10 @@
 <div id="ajax-page" class="ajax-page-content">
     <div class="ajax-page-wrapper">
         <div class="ajax-page-nav">
-            <div class="nav-item ajax-page-prev-next">
-                <a class="ajax-page-load" href="uiuc.html"><i class="zmdi zmdi-chevron-left"></i></a>
-                <a class="ajax-page-load" href="uiuc.html"><i class="zmdi zmdi-chevron-right"></i></a>
-            </div>
+            <!--<div class="nav-item ajax-page-prev-next">-->
+                <!--<a class="ajax-page-load" href="uiuc.html"><i class="zmdi zmdi-chevron-left"></i></a>-->
+                <!--<a class="ajax-page-load" href="uiuc.html"><i class="zmdi zmdi-chevron-right"></i></a>-->
+            <!--</div>-->
             <div class="nav-item ajax-page-close-button">
                 <a id="ajax-page-close-button" href="#"><i class="zmdi zmdi-close"></i></a>
             </div>
@@ -55,8 +55,9 @@
                 </div>
                 <ul class="project-general-info">
                     <li><p><i class="fa fa-user"></i>Liyuan Liu, Shi Zhi, Yu Zhang, Shiyin Wang, Qi Li, Chao Zhang and Jiawei Han</p></li>
+                    <li><p><i class="fa fa-map"></i>Data Mining Group, University of Illinois at Urbana-Champaign</p></li>
                     <!--<li><p><i class="fa fa-globe"></i> <a href="#" target="_blank">www.project-site.com</a></p></li>-->
-                    <li><p><i class="fa fa-calendar"></i>2019 Jun ~ Sep</p></li>
+                    <li><p><i class="fa fa-calendar"></i>2019 Jun ~ 2019 Sep</p></li>
                 </ul>
 
                 <p class="text-justify">In this paper, we aim to train a unified Named Entity Recognition (NER) model with annotations from multiple sources. It is challenging even for datasets from the same domain, because annotations from different sources may cover different sets of entity types. Such inconsistency makes it omnipresent to treat them as different tasks, and no existing methods, to the best of our knowledge, construct a single model to extract entities of any type covered by disparate datasets. Here, we refer such task as proto-NER and present complementary learning to train with only partial annotations. For this purpose, we explore not only heuristic but also end-to-end learning approaches. Specifically, we transform original one-hot labels to fuzzy labels while preserving the original information. We further propose the fuzzy conditional random field that takes fuzzy labels as supervision and spontaneously integrates label spaces of different corpora. Extensive experiments demonstrate the efficacy of complementary learning and the superiority of the proposed end-to-end approach.</p>
@@ -64,9 +65,9 @@
 
                 <!-- Technology -->
                 <div class="tags-block">
-                    <div class="block-title">
-                        <h3>Technology</h3>
-                    </div>
+                    <!--<div class="block-title">-->
+                        <!--<h3>Technology</h3>-->
+                    <!--</div>-->
                     <ul class="tags">
                         <li><a>CRF</a></li>
                         <li><a>NER</a></li>
@@ -77,14 +78,13 @@
                 <!-- /Technology -->
 
                 <!-- Share Buttons -->
-                <!--<div class="btn-group share-buttons">-->
-                    <!--<div class="block-title">-->
-                        <!--<h3>Share</h3>-->
-                    <!--</div>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>-->
-                    <!--<a href="#" target="_blank" class="btn"><i class="fa fa-dribbble"></i> </a>-->
-                <!--</div>-->
+                <div class="btn-group share-buttons">
+                    <div class="block-title">
+                        <h3>Share</h3>
+                    </div>
+                    <a href="https://www.facebook.com/sharer/sharer.php?u=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-facebook"></i> </a>
+                    <a href="http://www.twitter.com/share?url=https://shiyinw.github.io/" target="_blank" class="btn"><i class="fa fa-twitter"></i> </a>
+                </div>
                 <!-- /Share Buttons -->
             </div>
         </div>
