--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <!--<a class="pt-trigger" href="#services" data-animation="62">Services</a>-->
               <!--</li>-->
               <li>
-                <a class="pt-trigger" href="#projects" data-animation="62">Projects</a>
+                <a class="pt-trigger" href="#projects" data-animation="62">Stories</a>
               </li>
               <!--<li>-->
                 <!--<a class="pt-trigger" href="#blog" data-animation="62">Blog</a>-->
@@ -356,7 +356,7 @@
             <section class="pt-page" data-id="projects">
               <div class="section-inner custom-page-content">
                 <div class="page-header color-1">
-                  <h2>Projects</h2>
+                  <h2>Stories</h2>
                 </div>
                 <div class="page-content">
 
@@ -369,13 +369,13 @@
                         <a class="filter btn btn-sm btn-link active" data-group="all">All</a>
                       </li>
                       <li>
-                        <a class="filter btn btn-sm btn-link" data-group="research">Research</a>
+                        <a class="filter btn btn-sm btn-link" data-group="research">Researches</a>
                       </li>
                       <li>
-                        <a class="filter btn btn-sm btn-link" data-group="product">Product</a>
+                        <a class="filter btn btn-sm btn-link" data-group="product">Projects</a>
                       </li>
                       <li>
-                        <a class="filter btn btn-sm btn-link" data-group="field">Field Study</a>
+                        <a class="filter btn btn-sm btn-link" data-group="field">Field Studies</a>
                       </li>
                       <li>
                         <a class="filter btn btn-sm btn-link" data-group="others">Others</a>
@@ -979,8 +979,8 @@
     <script type="text/javascript" src="js/jquery.magnific-popup.min.js"></script>
     <script type="text/javascript" src="js/jquery.hoverdir.js"></script>
     <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=YOUR-API-KEY"></script>-->
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
-    <script type="text/javascript" src="js/jquery.googlemap.js"></script>
+    <!--<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>-->
+    <!--<script type="text/javascript" src="js/jquery.googlemap.js"></script>-->
     <script type="text/javascript" src="js/main.js"></script>
     <link rel="stylesheet" type="text/css" href="assets/lib/css/video-js.css">
     <script src="assets/lib/js/jquery.js"></script>
