--- a/index.html
+++ b/index.html
@@ -135,9 +135,9 @@
                         <div class="block-title">
                           <h3>About <span>Me</span></h3>
                         </div>
-                        <p>HELLO WORLD!! I am thrilled that you are here, visiting my website. I am currently studying Computer Science and Statistics(minor) at Tsinghua University from 2016 to 2020. To experience the interdisciplinary fields, I am a member of the BID (Business Intelligence Design) project.</p>
-                        <p>During my first three years of my undergraduate life, I am lucky to have three research experience in Central America(UIUC), the East Coast(MIT), and the West Coast(Stanford), where I worked on Text Mining, Privacy-Preserving Machine Learning, and Bioinformatics. I entertain the idea of applying for graduate schools. Broadening the horizon of human intelligence and technology development is an honorable mission in my mind. I hope I can explore a challenging new field in the following years.</p>
-                        <p>Thanks to the Belt & Road Initiative and Tsinghua's support, I got several chances to have a look into a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer and studied two weeks at AUC in Egypt about Egyptology, Cairo Urban Development, Middle East Conflicts, History of Egypt, etc. The most unbelievable experience is participating in the BRICS Youth Forum, one of the highest level of youth diplomacy, as a delegate.</p>
+                        <p>HELLO WORLD!! I am thrilled that you are here, visiting my website. I am currently studying Computer Science and Statistics(minor) at Tsinghua University from 2016 to 2020. I was awarded Global Competence Fellowship for my senior year.</p>
+                        <p>During my first three years of my undergraduate life, I am lucky to have three research experience in Central America(UIUC), the East Coast(MIT), and the West Coast(Stanford), where I worked on Text Mining, Privacy-Preserving Machine Learning, and Biomedical Informatics. Broadening the horizon of human intelligence and technology development is an honorable mission in my mind. I hope I can explore a challenging new field in the following years.</p>
+                        <p>I got several chances to have a look into a wide range of developing countries. I went to Sri Lanka as a sea turtle protection volunteer and studied two weeks at AUC in Egypt about Egyptology, Cairo Urban Development, Middle East Conflicts, etc. Besides, I have also been to Nepal, Singapore, and Turkey. The most unbelievable experience is participating in the BRICS Youth Forum, one of the highest level of official youth diplomacy, as a delegate.</p>
                       </div>
                     </div>
 
@@ -147,8 +147,8 @@
                         <li><span class="title"></span><span class="value"><a href="mailto:shiyinw@stanford.edu">shiyinw@stanford.edu</a></span></li>
                         <li><span class="title"></span><span class="value"><a href="mailto:shiyinw@mit.edu">shiyinw@mit.edu</a></span></li>
                         <li><span class="title"></span><span class="value"><s>shiyinw@illinois.edu</s></span></li>
-                        <li><span class="title">LANGUAGE</span><span class="value">English (Fluent), Chinese (Native), Español (Beginner)</span></li>
-                        <li><span class="title">HOBBY</span><span class="value">Equestrian, Watercolor, Musical, Golf</span></li>
+                        <li><span class="title">LANGUAGE</span><span class="value">English, Chinese, Español(Beginner)</span></li>
+                        <li><span class="title">HOBBY</span><span class="value">Watercolor, Musical, Traveling, Equestrian</span></li>
                       </ul>
 
                         <div class="download-resume">
@@ -288,7 +288,7 @@
                             <div class="skill-percentage skill-1"></div>
                           </div>
 
-                          <h4>Graphic Design (AI)</h4>
+                          <h4>Graphic Design (Adobe Illustrator)</h4>
                           <div class="skill-container">
                             <div class="skill-percentage skill-2"></div>
                           </div>
